--- a/src/Web/Client/Pages/AssetSerialDetail.razor
+++ b/src/Web/Client/Pages/AssetSerialDetail.razor
@@ -9,7 +9,7 @@
 @inject ISnackbar Snackbar
 @inject IDialogService DialogService
 
-<MudDrawer Open="true" Width="400px" Height="100%" Anchor="Anchor.End" Elevation="1" Variant="@DrawerVariant.Temporary"
+<MudDrawer Open="true" Width="500px" Height="100%" Anchor="Anchor.End" Elevation="1" Variant="@DrawerVariant.Temporary"
     DisableOverlay="true">
     <MudDrawerHeader Class="pa-1">
         <div
@@ -95,11 +95,6 @@
     private bool showHistory = false;
     private bool isLoading = true;
     private bool isSerialHasChanged = false;
-    private bool showNoteTextEditor = false;
-
-    void Cancel() => showNoteTextEditor = false;
-
-    void ShowDialog() => DialogService.Show<NoteDialog>();
 
     protected override async Task OnInitializedAsync()
     {
@@ -151,7 +146,7 @@
         DialogParameters parameters = new DialogParameters();
         parameters.Add("AssetSerial", assetSerial);
         parameters.Add("OnSaveButtonClicked", OnSaveButtonClicked);
-        DialogService.Show<NoteDialog>("", parameters);
+        DialogService.Show<NoteDialog>("Note", parameters);
     }
 
     private async Task<IEnumerable<UserDisplay>> SearchEmployees(string value)
