--- a/src/Web/Client/Pages/HomePage.razor
+++ b/src/Web/Client/Pages/HomePage.razor
@@ -6,7 +6,17 @@
 
 <PageTitle>Home</PageTitle>
 
-@if (_getAssetType != null)
+@if (_getAssetType == null || _getAssetType.Count() == 0)
+{
+    <MudCard Class="mt-3 pa-4" Style="max-width: 550px">
+        <MudCardContent>
+            <MudStack Row=true Class="d-flex justify-space-between mb-5">
+                <MudText Typo="Typo.body1" Class="mud-primary-text" Style="font-weight: bold"> No assets found! </MudText>
+            </MudStack>
+        </MudCardContent>
+    </MudCard>
+}
+else
 {
     @foreach (var assetType in _getAssetType)
     {
@@ -29,10 +39,7 @@
         }
     }
 }
-else
-{
-    <p>Loading...</p>
-}
+
 
 @code {
 
