--- a/src/Web/Client/Pages/HomePage.razor
+++ b/src/Web/Client/Pages/HomePage.razor
@@ -3,16 +3,13 @@
 @inject IIconService IconService;
 @attribute [Authorize]
 
-
 <PageTitle>Home</PageTitle>
 
 @if (_getAssetType == null || _getAssetType.Count() == 0)
 {
-    <MudCard Class="mt-3 pa-4" Style="max-width: 550px">
+    <MudCard Class="mt-3 pa-4" Style="max-width: 400px">
         <MudCardContent>
-            <MudStack Row=true Class="d-flex justify-space-between mb-5">
-                <MudText Typo="Typo.body1" Class="mud-primary-text" Style="font-weight: bold"> No assets found! </MudText>
-            </MudStack>
+                <MudText Typo="Typo.h6" Class="mud-primary-text" Style="font-weight: bold"> No assets found! </MudText>
         </MudCardContent>
     </MudCard>
 }
