--- a/src/Web/Client/Pages/AssetPurchase.razor
+++ b/src/Web/Client/Pages/AssetPurchase.razor
@@ -73,7 +73,11 @@
             <FluentValidationValidator />
             <MudText Class="mb-3" Typo="Typo.h6">Type: @_selectedAssetType.Name</MudText>
             <MudTextField @bind-Value=_newAsset.Name Label="Name" Margin="Margin.Dense" Variant="Variant.Outlined" />
-            <MudStack Row=true Class="justify-end mt-3">
+            @foreach (var property in _newAsset.Properties)
+            {
+                <MudTextField Class="mt-3" @bind-Value=property.Value Label="@property.Label" Margin="Margin.Dense" Variant="Variant.Outlined" Immediate />
+            }
+            <MudStack Row=true Class="justify-end mt-5">
                 <MudButton Color="Color.Tertiary" Variant=Variant.Filled ButtonType="ButtonType.Submit">Create</MudButton>
                 <MudButton Variant=Variant.Filled OnClick="OpenDialog">Cancel</MudButton>
             </MudStack>
@@ -133,9 +137,12 @@
     private async Task CreateNewAsset(string assetTypeId)
     {
         _newAsset.AssetTypeId = assetTypeId;
-        await AssetsService.CreateAsset(_newAsset);
-        OpenDialog();
-        _newAsset = new CreateAssetRequest();
+        var result = await AssetsService.CreateAsset(_newAsset);
+        if (result != null)
+        {
+            OpenDialog();
+            _newAsset = new CreateAssetRequest();
+        }
     }   
 
     private void AddRow()
@@ -153,6 +160,8 @@
 
     private void OpenDialog()
     {
+        _newAsset = new();
+        _newAsset.Properties = _selectedAssetType.Properties.Select(p => new Properties { Label = p.Label, Value = p.Value}).ToList();
         _isOpen = !_isOpen;
     }
 }
