--- a/src/Web/Client/Shared/NoteDialog.razor
+++ b/src/Web/Client/Shared/NoteDialog.razor
@@ -1,3 +1,4 @@
+@using Blazored.TextEditor
 @using MRA.AssetsManagement.Web.Client.Services.AssetSerials
 @using MRA.AssetsManagement.Web.Shared.AssetSerialHistory
 @using MRA.AssetsManagement.Web.Shared.AssetSerials
