--- a/src/Web/Client/Pages/Assets.razor
+++ b/src/Web/Client/Pages/Assets.razor
@@ -102,7 +102,7 @@
                     <MudText>@context.AssetSerialType.Name</MudText>
                 </MudStack>
             </MudTd>
-            <MudTd DataLabel="Name">@context.Name</MudTd>
+            <MudTd DataLabel="Name">@context.AssetFullName</MudTd>
             <MudTd DataLabel="Assigned To">@context.Employee?.FullName</MudTd>
             <MudTd DataLabel="LastModified">@context.LastModified.ToString("dd MMMM yyyy")</MudTd>
             <MudTd DataLabel="From">@context.From.ToString("dd MMMM yyyy")</MudTd>
